# vpb25-facebook-agent-data-pipeline

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
ai_services/: embedding.py  gemini_client.py
api/: dependencies.py  main.py
api/endpoints/: files.py  lakehouse.py  process.py  status.py
api/models/: base.py  schemas.py
backup/: iceberg_service.py  minio_service.py  pdf_service.py  txt_service.py
bankcrawler/bankcrawler/spiders/: vpbank.py
docker/: Dockerfile
lakehouse/connectors/: iceberg.py  qdrant.py  s3.py
lakehouse/extractor/: pdf_extractor.py  txt_extractor.py
lakehouse/processors/: batch.py  document_processor.py  extractors.py  validators.py
lakehouse/storage/: buckets.py  file_manager.py  schemas.py  tables.py  writers.py
lakehouse/vectorize/: vectorize_pipeline.py
logs/: __init__.py
settings/: config.py
utils/: helper.py  text_utils.py
