[project]
name = "vpb25-facebook-agent-data-pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "Huy Dao Ngoc",email = "dnhuy2802@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "minio (>=7.2.15,<8.0.0)",
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pyiceberg[duckdb,s3fs] (>=0.9.1,<0.10.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "pdfplumber (>=0.11.6,<0.12.0)",
    "chardet (>=5.2.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
